--- a/lib/src/components/checkbox/checkbox.css
+++ b/lib/src/components/checkbox/checkbox.css
@@ -1,21 +1,21 @@
 :host {
   --core-checkbox-bg-color: var(--core-color-white);
+  --core-checkbox-border-color: var(--core-color-ui-light);
   --core-checkbox-border: var(--core-border-width-default) solid
-    var(--core-color-ui-light);
+    var(--core-checkbox-border-color);
   --core-checkbox-cursor: pointer;
   --core-checkbox-box-shadow: none;
   --core-checkbox-height: var(--core-size-md);
   --core-checkbox-border-radius: var(--core-border-radius-default);
+  --core-checkbox-indicator-color: var(--core-color-white);
 }
 
 :host {
-  cursor: pointer;
-  outline: 0;
-  vertical-align: middle;
-  height: var(--core-checkbox-height);
   display: inline-flex;
   align-items: center;
   margin-right: var(--core-space-sm);
+  height: var(--core-checkbox-height);
+  cursor: pointer;
 }
 
 :host([full]) {
@@ -40,13 +40,14 @@
 }
 
 :host([disabled]) {
-  color: var(--core-color-font-light);
+  opacity: 0.5;
+  --core-checkbox-bg-color: var(--core-color-ui-lighter);
+  --core-checkbox-indicator-color: var(--core-color-ui-lighter);
 }
 
 :host [part="label"] {
-  line-height: 1.5;
   font-size: var(--hw-font-size-small);
-  display: block;
+  display: inline-block;
   flex: 1;
   margin-left: var(--core-space-sm);
 }
@@ -59,13 +60,12 @@ input {
 }
 
 [part="box"] {
-  box-shadow: var(--core-button-box-shadow);
-  background-color: var(--core-checkbox-bg-color);
-  color: var(--core-color-font);
+  background: var(--core-checkbox-bg-color);
+  border: var(--core-checkbox-border);
+  border-color: var(--core-checkbox-border-color);
   width: calc(var(--core-checkbox-height) - var(--core-space-md));
   height: calc(var(--core-checkbox-height) - var(--core-space-md));
   border-radius: var(--core-checkbox-border-radius);
-  border: var(--core-checkbox-border);
   position: relative;
   vertical-align: middle;
   display: inline-flex;
@@ -73,9 +73,9 @@ input {
   justify-content: center;
 }
 
-:host(:focus) [part="box"] {
-  border-color: var(--core-color-focus);
-  --core-button-box-shadow: var(--core-focus-outline);
+:host([focused]) [part="box"] {
+  --core-checkbox-border-color: var(--core-color-focus);
+  box-shadow: var(--core-focus-outline);
 }
 
 :host(:hover) [part="box"] {
@@ -84,17 +84,12 @@ input {
 
 :host([checked]) [part="box"] {
   --core-checkbox-bg-color: var(--core-color-focus);
-  --core-checkbox-border: 1px solid var(--core-color-focus);
+  --core-checkbox-border-color: var(--core-color-focus);
 }
 
-[part="box"] [part="indicator"] {
+[part="indicator"] {
   font-size: var(--core-checkbox-indicator-font-size);
-  color: var(--core-color-white);
+  color: var(--core-checkbox-indicator-color);
   fill: currentColor;
   display: block;
-  opacity: 0;
-}
-
-:host([checked]) [part="indicator"] {
-  opacity: 1;
 }
