--- a/lib/src/components/menu/menu-item.css
+++ b/lib/src/components/menu/menu-item.css
@@ -1,13 +1,35 @@
 :host {
+  --core-list-item-bg: var(--core-color-white);
+  --core-list-item-border-radius: 0;
+}
+
+:host {
+  outline: 0;
   display: flex;
   align-items: center;
   justify-content: between;
   list-style: none;
   margin: 0;
   cursor: pointer;
+  border-radius: var(--core-list-item-border-radius);
+  background: var(--core-list-item-bg);
   padding: var(--core-list-item-padding);
   min-height: var(--core-list-item-height);
   color: var(--core-color-font);
+  margin: var(--core-list-item-margin);
+}
+
+:host(:last-of-type) {
+  --core-list-item-margin: 0;
+}
+
+:host(:hover) {
+  --core-list-item-bg: var(--core-color-ui-lightest);
+}
+
+:host(:focus) {
+  z-index: 1;
+  box-shadow: var(--core-focus-outline);
 }
 
 :host([size="sm"]) {
