--- a/lib/src/components/menu/menu.css
+++ b/lib/src/components/menu/menu.css
@@ -1,6 +1,7 @@
 :host {
   --core-list-item-height: var(--core-size-md);
   --core-list-item-padding: 0 var(--core-space-md);
+  --core-list-item-margin: 0;
   display: flex;
   flex-direction: column;
   list-style: none;
@@ -12,21 +13,25 @@
 :host([size="sm"]) {
   --core-list-item-height: var(--core-size-sm);
   --core-list-item-padding: 0 var(--core-space-md);
+  --core-list-item-margin: var(--core-space-sm) 0;
 }
 
 :host([size="md"]) {
   --core-list-item-height: var(--core-size-md);
   --core-list-item-padding: 0 var(--core-space-md);
+  --core-list-item-margin: var(--core-space-md) 0;
 }
 
 :host([size="lg"]) {
   --core-list-item-height: var(--core-size-lg);
   --core-list-item-padding: 0 var(--core-space-lg);
+  --core-list-item-margin: var(--core-space-lg) 0;
 }
 
 :host([size="xl"]) {
   --core-list-item-height: var(--core-size-xl);
   --core-list-item-padding: 0 var(--core-space-lg);
+  --core-list-item-margin: var(--core-space-lg) 0;
 }
 
 :host([full]) {
