--- a/lib/src/components/tabs/tabs.css
+++ b/lib/src/components/tabs/tabs.css
@@ -13,7 +13,7 @@
   display: inline-flex;
   align-items: center;
   overflow-x: scroll;
-  height: var(--core-tab-height);
+  height: auto;
   max-width: 100%;
 }
 
