--- a/lib/src/components/select/option.css
+++ b/lib/src/components/select/option.css
@@ -2,7 +2,7 @@
   --core-option-padding: 0 var(--core-space-sm);
   --core-option-bg-color: var(--core-color-white);
   --core-option-border-radius: 0;
-  --core-option-active-color: var(--core-color-ui-lighter);
+  --core-option-active-color: var(--core-color-ui-lightest);
   --core-option-selected-color: var(--core-color-focus);
   --core-option-selected-active-color: var(--core-color-focus-dark);
   --core-option-font-color: var(--core-color-font);
