--- a/lib/src/components/tabs/tabs.css
+++ b/lib/src/components/tabs/tabs.css
@@ -2,6 +2,7 @@
   --core-tab-height: var(--core-size-md);
   --core-tab-box-shadow: 0;
   --core-tab-border-width: var(--core-border-width-md);
+  --core-tab-display: inline-flex;
   --core-tab-border-color: transparent;
   /* TODO: This is weeeeird, cannot set shorthand properties for border width or border style */
   --core-tab-border-bottom-style: solid;
@@ -12,7 +13,7 @@
 :host {
   display: inline-flex;
   align-items: center;
-  overflow-x: scroll;
+  overflow-x: auto;
   height: auto;
   max-width: 100%;
 }
@@ -20,6 +21,14 @@
 :host([full]) {
   display: flex;
   width: 100%;
+  --core-tab-display: flex;
+}
+
+@media (min-width: 800px) {
+  :host {
+    overflow-x: initial;
+    flex-wrap: wrap;
+  }
 }
 
 :host([vertical]) {
